--- a/README
+++ b/README
@@ -9,6 +9,21 @@
 →handlerが2階層下のdomainに依存したりします
 →DIもしない
 
+### フォルダ構成
+- handler
+    ∟rest
+        ∟[各種domain].go → 全てのCRUD関数記載(interface,structは一つ)
+- usecase
+    ∟[各種domain].go → 全てのCRUD関数記載(interface,structは一つ) ここでdb接続&閉じる
+- domain
+    ∟model
+        ∟[各種domain].go
+    ∟repository 
+        ∟[各種domain]_repository.go → CRUD一つのinterfaceにまとめる([各種domain]Repository interface)
+- infra
+    ∟persistence
+        ∟[各種domain].go → 全てのCRUD関数記載
+
 
 ### handler
 - HTTPリクエストを受け取り、UseCase を使って処理を行い、結果を返す
